force-app/main/default/objects/RuleAction__c/fields/Apex_Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Class__c</fullName>
    <label>Apex Job Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>