force-app/main/default/objects/RuleAction__c/fields/Bulk_API__c.field-meta.xml
<CustomField>
    <fullName>Bulk_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Bulk API</label>
    <type>Checkbox</type>
</CustomField>