force-app/main/default/objects/RuleAction__c/fields/CallOut_Action__c.field-meta.xml
<CustomField>
    <fullName>CallOut_Action__c</fullName>
    <label>CallOut Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>