force-app/main/default/objects/RuleAction__c/fields/Callout_Method__c.field-meta.xml
<CustomField>
    <fullName>Callout_Method__c</fullName>
    <label>Callout Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>