force-app/main/default/objects/RuleAction__c/fields/Callout_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout__c</fullName>
    <description>Sets the timeout in milliseconds for the request. This can be any value between 1 and 60,000</description>
    <inlineHelpText>Set the timeout in milliseconds for the request. This can be any value between 1 and 60,000</inlineHelpText>
    <label>Callout Timeout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>