force-app/main/default/objects/RuleAction__c/fields/CrossObjectField__c.field-meta.xml
<CustomField>
    <fullName>CrossObjectField__c</fullName>
    <inlineHelpText>Cross Object Field Notation :  Relationshipname.FieldName. Eg:- Account.Type</inlineHelpText>
    <label>Cross Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>