force-app/main/default/objects/RuleAction__c/fields/DisplayValue__c.field-meta.xml
<CustomField>
    <fullName>DisplayValue__c</fullName>
    <formula>IF(ISPICKVAL(Type__c ,&apos;Update Field&apos;) ,
        IF(!ISBLANK(CrossObjectField__c ) , 
                       Value__c ,
                       IF(ISPICKVAL(Field_Type__c ,
                                      &apos;TEXTAREA&apos;),Value__c ,Value__c )),
  
 
 
                                       IF(ISNULL(Email_Template__c ) ,  &quot;Template Used: &quot; +Email_Template__c , 
                                       

                                   IF(ISPICKVAL(Type__c ,&apos;Insert Related Object&apos;), 
                                              &quot;(Field: Value),(Field:Value)..... &quot; ,

                                                  IF(ISPICKVAL(Type__c ,&apos;Send Email&apos;) ,  &quot;Template Used : &quot;+  EmailTemplateName__c  ,

 
 &quot;AA&quot;)

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <type>Text</type>
</CustomField>