force-app/main/default/objects/RuleAction__c/fields/Email_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Folder__c</fullName>
    <label>Email Template Folder</label>
    <length>20</length>
    <type>Text</type>
</CustomField>