force-app/main/default/objects/RuleAction__c/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>