force-app/main/default/objects/RuleAction__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Sets the URL for the endpoint of the external server for this request.</description>
    <inlineHelpText>Set  the URL for the endpoint of the external server for this request.</inlineHelpText>
    <label>Endpoint URL</label>
    <type>TextArea</type>
</CustomField>