force-app/main/default/objects/RuleAction__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ccount Name</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Account Site</fullName>
            </value>
            <value>
                <fullName>Account Source</fullName>
            </value>
            <value>
                <fullName>Annual Revenue</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Created By</fullName>
            </value>
            <value>
                <fullName>Data.com Key</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Last Modified By</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Parent Account</fullName>
            </value>
            <value>
                <fullName>Partner Account</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>SIC Code</fullName>
            </value>
            <value>
                <fullName>SIC Description</fullName>
            </value>
            <value>
                <fullName>Ticker Symbol</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>