force-app/main/default/objects/RuleAction__c/fields/Input_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Input_Parameters__c</fullName>
    <description>stores the parameter required for http callouts &amp; apex class execution</description>
    <inlineHelpText>Input parameter in form key1:sobjectField_Value1,
key2:sobjectField_Value2</inlineHelpText>
    <label>Input Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>