force-app/main/default/objects/RuleAction__c/fields/Long_Value__c.field-meta.xml
<CustomField>
    <fullName>Long_Value__c</fullName>
    <label>Long Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>