force-app/main/default/objects/RuleAction__c/fields/Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_Name__c</fullName>
    <label>Lookup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>