force-app/main/default/objects/RuleAction__c/fields/Lookup_Where_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Where_Fields__c</fullName>
    <label>Condition</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>