force-app/main/default/objects/RuleAction__c/fields/Notified_User__c.field-meta.xml
<CustomField>
    <fullName>Notified_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notified User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rule_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>