force-app/main/default/objects/RuleAction__c/fields/Output_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Output_Parameters__c</fullName>
    <description>stores the output response mapping for http callout &amp; apex class</description>
    <inlineHelpText>Output parameter in form key1:sobjectField_Value1,
key2:sobjectField_Value2</inlineHelpText>
    <label>Output Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>