force-app/main/default/objects/RuleAction__c/fields/Request_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Request_Parameter__c</fullName>
    <label>Request Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>