force-app/main/default/objects/RuleAction__c/fields/Response_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Response_Parameter__c</fullName>
    <label>Response Parameter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>