force-app/main/default/objects/RuleAction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Update Field</fullName>
                <default>true</default>
                <label>Update Field</label>
            </value>
            <value>
                <fullName>Insert Related Object</fullName>
            </value>
            <value>
                <fullName>Insert Classification</fullName>
                <color>#FF0000</color>
                <label>Insert Classification</label>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Execute an Apex Job</fullName>
            </value>
            <value>
                <fullName>Apex Callout-HTTP</fullName>
            </value>
            <value>
                <fullName>Load Iframe</fullName>
            </value>
            <value>
                <fullName>Load a VF Page</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Attach Documents</fullName>
            </value>
            <value>
                <fullName>Chatter Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>