force-app/main/default/objects/RuleAction__c/fields/Unique_Import_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Import_Code__c</fullName>
    <label>Unique Import Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>