force-app/main/default/objects/RuleAction__c/fields/User_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Owner_Id__c</fullName>
    <label>User/Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>