force-app/main/default/objects/RuleAction__c/validationRules/ApexClass_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ApexClass_Required</fullName>
    <active>true</active>
    <description>when the action is execute apex job apex class is required</description>
    <errorConditionFormula>AND( ISPICKVAL(Type__c , &apos;Execute An Apex Job&apos;), ISBLANK(  Apex_Job_Class__c   ))</errorConditionFormula>
    <errorMessage>Please select the apex job</errorMessage>
</ValidationRule>