force-app/main/default/objects/RuleAction__c/validationRules/Send_Email_Template_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Email_Template_Req</fullName>
    <active>true</active>
    <description>when the action is send email template is required</description>
    <errorConditionFormula>AND( ISPICKVAL(Type__c , &apos;Send Email&apos;), ISBLANK(  Email_Template__c  ))</errorConditionFormula>
    <errorMessage>Please select the email template</errorMessage>
</ValidationRule>